--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,9 @@ weibo_username:     god13dog@163.com
 # Build settings
 highlighter: pygments
 permalink: pretty
+gems: [jekyll-paginate]
 paginate: 10
+paginate_path: "page:num"
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
 anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
 
