--- a/_config.yml
+++ b/_config.yml
@@ -1,40 +1,60 @@
-permalink: /:year/:month/:day/:title.html
-gems: [jekyll-paginate]
-paginate: 10
-paginate_path: "page:num"
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely need to edit after that.
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'jekyll serve'. If you change this file, please restart the server process.
+
+# Site settings
+title: Cyx
+brief-intro: Artificial Intelligence
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "http://taominer.github.io" # the base hostname & protocol for your site
+
+permalink: /:year/:month/:day/:title/
+
+# other links
+# twitter_username: gaohaoyang126
+# facebook_username: gaohaoyang.water
+github_username:  TaoMiner
+email: god13dog@163.com
+# weibo_username: 
+# zhihu_username: gaohaoyang
+# linkedIn_username: gaohaoyang
+dribbble_username: 
+
+description_footer: 这里是Ethan Cao的个人网站！
+
+# comments
+# two ways to comment, only choose one, and use your own short name
+# 两种评论插件，选一个就好了，使用自己的 short_name
+duoshuo_shortname: ethancao
+#disqus_shortname: gaohaoyang
+
+# statistic analysis 统计代码
+# 百度统计 id，将统计代码替换为自己的百度统计id，即
+# hm.src = "//hm.baidu.com/hm.js?xxxxxxxxxxxx";
+# xxxxx字符串
+baidu_tongji_id: #cf8506e0ef223e57ff6239944e5d46a4
+google_analytics_id: UA-70766178-1 # google 分析追踪id
+
+# Build settings
 markdown: kramdown
+
 kramdown:
- input: GFM  
+  input: GFM
+  syntax_highlighter: rouge
 
-# 作者信息
-author: 
-  name: Ethan Cao
-  email: god13dog@163.com
-  link: http://taominer.github.com
-  weibo: http://weibo.com/1752135657
-  github: http://github.com/TaoMiner
-  # linkedin: https://www.linkedin.com/pub/anya-lin/81/91/232
+# port
+# port: 1234
 
-# 站点信息
-title: Ethan's Blog
-description: 机器学习爱好者
-url: http://taominer.github.io
-rss_url: /pages/feed.xml
-keyword: "机器学习"
+# url
+category_dir: category/
+tag_dir: tag/
 
-# Sidebar settings
-sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "写写代码，做做设计，看看产品。世界那么大，我想去看看。"
-sidebar-avatar: /public/img/ethan_avatar.png      # use absolute URL, seeing it's used in both `/` and `/about/`
+# excerpt
+excerpt_separator: "\n\n\n\n"
 
-# google analytics 设置
-ga:
-  id: UA-70766178-1
-  url: taominer.github.io
-
-# disqus 设置
-# disqus_username: ethancao
-# Duoshuo settings
-duoshuo_username: ethancao
-# Share component is depend on Comment so we can NOT use share only.
-duoshuo_share: true                     # set to false if you want to use Comment without Sharing
+# paginate
+gems: [jekyll-paginate]
+paginate: 5
