--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ duoshuo_shortname: ethancao
 # 百度统计 id，将统计代码替换为自己的百度统计id，即
 # hm.src = "//hm.baidu.com/hm.js?xxxxxxxxxxxx";
 # xxxxx字符串
-baidu_tongji_id: #cf8506e0ef223e57ff6239944e5d46a4
+baidu_tongji_id: 12621a9818a9994fca4b7e95e16ba179
 google_analytics_id: UA-70766178-1 # google 分析追踪id
 
 # Build settings
